--- a/src/components/Parking/ParkingResult.css
+++ b/src/components/Parking/ParkingResult.css
@@ -1,26 +1,142 @@
-.ParkingResult .ParkingArea {
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+.ParkingResult {
+    background: #222;
+    font-family: Consolas;
+}
+
+.parking {
+    width: 1160px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
-    height: 150px;
+    padding-top: 50px;
 }
 
-.ParkingResult .parking-space {
-    float: left;
-    background-color: seagreen;
+.parking-row {
+    height: 200px;
+    position: relative;
+    margin-bottom: 100px;
+}
+
+.parking-row:before {
+    content: "";
+    height: 36px;
+    width: 990px;
+    border-top: 17px solid #222;
+    border-bottom: 17px solid #222;
+    background: white;
+    position: absolute;
+    top: 82px;
+    left: 150px;
+}
+
+.parking-row:after {
+    content: "← SIDEWALK";
+    height: 20px;
+    line-height: 20px;
+    width: 1040px;
+    padding: 0 20px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    left: 100px;
+    bottom: -20px;
+    clear: both;
+}
+
+.parking-road {
     width: 100px;
-    height: 180px;
-    margin-top: 10px;
-    margin-left: 20px;
+    height: 200px;
+    position: relative;
+    float: left;
+    text-align: center;
+    padding-top: 50px;
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
 }
 
-.ParkingResult .parking-space.car {
-    background-color: orangered;
+.parking-road:before {
+    content: "";
+    height: 20px;
+    width: 100%;
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    background-image: repeating-linear-gradient(90deg, transparent, transparent 8px, rgba(255, 255, 255, 1) 8px, rgba(255, 255, 255, 1) 12px);
 }
 
-.ParkingResult .parking-space.car img {
-    max-width: 100%;
-    height: 100%;
+.parking-road:after {
+    content: "EXIT";
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 100px;
+    left: 0;
+    font-size: 16px;
+    color: white;
+}
+
+.parking-cube {
+    width: 66px;
+    height: 200px;
+    position: relative;
+    float: left;
+}
+
+.parking-cube:before {
+    content: "";
+    width: 6px;
+    height: 200px;
+    border: 2px solid white;
+    position: absolute;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    right: 0;
+    top: 0;
+}
+
+.parking-cube:after {
+    content: "";
+    width: 50px;
+    height: 40px;
+    border-left: 15px solid white;
+    border-right: 15px solid white;
+    position: absolute;
+    left: 5px;
+    top: 80px;
+    z-index: -1;
+}
+
+.parking-edge {
+    width: 50px;
+    height: 200px;
+    border: 2px solid white;
+    -webkit-border-top-left-radius: 30px;
+    -moz-border-radius-topright: 30px;
+    border-top-left-radius: 30px;
+    position: relative;
+    float: left;
+    background-image: repeating-linear-gradient(-45deg, transparent, transparent 8px, rgba(255, 255, 255, 1) 8px, rgba(255, 255, 255, 1) 10px);
+}
+
+.parking-up,
+.parking-down {
+    width: 60px;
+    height: 100px;
+    text-align: center;
+    color: orange;
+    line-height: 100px;
+}
+
+.parking-up.na,
+.parking-down.na {
+    background-image: repeating-linear-gradient(-45deg, transparent, transparent 8px, rgba(255, 165, 0, 0.5) 8px, rgba(255, 165, 0, 0.5) 10px);
 }
 
 .ParkingResult .console {
